[package]
name = "unix-cred"
version = "0.1.1"
edition = "2018"

description = "A library that simplifies reading peer credentials from Unix sockets."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["os::unix-apis"]
keywords = ["unix", "sockets", "peer", "credentials"]
repository = "https://github.com/cptpcrd/unix-cred-rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-freebsd", "x86_64-unknown-netbsd"]

[dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.1.0"
